src/main/java/com/example/fakebukproject/error/Constants.java
package com.example.fakebukproject.error;

public class Constants {
    public final static String USERNAME_NOT_FOUND = "Username not found";

    public final static String USER_ID_NOT_FOUND = "User with this id does't exists";

    public final static String PASSWORD_IS_INCORRECT = "Incorrect password";

    public final static String PICTURE_NOT_FOUND = "Picture not found";

    public final static String PICTURE_ID_NOT_FOUND = "Picture with this id doesn't exists";

    public final static String POST_NOT_FOUND = "Post not found";

    public final static String POST_ID_NOT_FOUND = "Post with this id doesn't exists";

    public final static String ITEM_NOT_FOUND = "Item not found";

    public final static String ITEM_ID_NOT_FOUND = "Item with this id doesn't exists";
}
